// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Drawer> -> custom transition: closed 1`] = `
Object {
  "close": [Function],
  "id": "curls.drawer.5",
  "isOpen": false,
  "open": [Function],
  "toggle": [Function],
}
`;

exports[`<Drawer> -> custom transition: hidden 1`] = `
Object {
  "css": Array [
    Object {
      "map": undefined,
      "name": "8u2raa",
      "next": undefined,
      "styles": "visibility:hidden;;opacity:0;",
    },
    Object {
      "map": undefined,
      "name": "1nywrpr",
      "next": undefined,
      "styles": "transition-duration:320ms;",
    },
    Object {
      "map": undefined,
      "name": "opk20j",
      "next": undefined,
      "styles": "transition-timing-function:linear;",
    },
    Object {
      "map": undefined,
      "name": "m616m3",
      "next": undefined,
      "styles": "transition-property:visibility, opacity;",
    },
  ],
  "hide": [Function],
  "isVisible": false,
  "show": [Function],
  "toggle": [Function],
}
`;

exports[`<Drawer> -> custom transition: visible 1`] = `
Object {
  "css": Array [
    Object {
      "map": undefined,
      "name": "zce4wa",
      "next": undefined,
      "styles": "visibility:visible;;opacity:1;",
    },
    Object {
      "map": undefined,
      "name": "1nywrpr",
      "next": undefined,
      "styles": "transition-duration:320ms;",
    },
    Object {
      "map": undefined,
      "name": "opk20j",
      "next": undefined,
      "styles": "transition-timing-function:linear;",
    },
    Object {
      "map": undefined,
      "name": "m616m3",
      "next": undefined,
      "styles": "transition-property:visibility, opacity;",
    },
  ],
  "hide": [Function],
  "isVisible": true,
  "show": [Function],
  "toggle": [Function],
}
`;

exports[`<Drawer> -> hide: hidden 1`] = `
Object {
  "css": Array [
    Object {
      "name": "gyp8mm",
      "styles": "visibility:hidden;",
    },
    Object {
      "map": undefined,
      "name": "1nywrpr",
      "next": undefined,
      "styles": "transition-duration:320ms;",
    },
    Object {
      "map": undefined,
      "name": "opk20j",
      "next": undefined,
      "styles": "transition-timing-function:linear;",
    },
    Object {
      "map": undefined,
      "name": "1gvesad",
      "next": undefined,
      "styles": "transition-property:visibility, transform;",
    },
  ],
  "hide": [Function],
  "isVisible": false,
  "show": [Function],
  "toggle": [Function],
}
`;

exports[`<Drawer> -> hide: open 1`] = `
Object {
  "close": [Function],
  "id": "curls.drawer.1",
  "isOpen": false,
  "open": [Function],
  "toggle": [Function],
}
`;

exports[`<Drawer> -> hide: visible 1`] = `
Object {
  "css": Array [
    Object {
      "map": undefined,
      "name": "1ltorz7",
      "next": undefined,
      "styles": "visibility:visible;;transform:translate3d(0,0,0);",
    },
    Object {
      "map": undefined,
      "name": "1nywrpr",
      "next": undefined,
      "styles": "transition-duration:320ms;",
    },
    Object {
      "map": undefined,
      "name": "opk20j",
      "next": undefined,
      "styles": "transition-timing-function:linear;",
    },
    Object {
      "map": undefined,
      "name": "1gvesad",
      "next": undefined,
      "styles": "transition-property:visibility, transform;",
    },
  ],
  "hide": [Function],
  "isVisible": true,
  "show": [Function],
  "toggle": [Function],
}
`;

exports[`<Drawer> -> show: closed 1`] = `
Object {
  "close": [Function],
  "id": "curls.drawer.0",
  "isOpen": false,
  "open": [Function],
  "toggle": [Function],
}
`;

exports[`<Drawer> -> show: hidden 1`] = `
Object {
  "css": Array [
    Object {
      "name": "gyp8mm",
      "styles": "visibility:hidden;",
    },
    Object {
      "map": undefined,
      "name": "1nywrpr",
      "next": undefined,
      "styles": "transition-duration:320ms;",
    },
    Object {
      "map": undefined,
      "name": "opk20j",
      "next": undefined,
      "styles": "transition-timing-function:linear;",
    },
    Object {
      "map": undefined,
      "name": "1gvesad",
      "next": undefined,
      "styles": "transition-property:visibility, transform;",
    },
  ],
  "hide": [Function],
  "isVisible": false,
  "show": [Function],
  "toggle": [Function],
}
`;

exports[`<Drawer> -> show: visible 1`] = `
Object {
  "css": Array [
    Object {
      "map": undefined,
      "name": "1ltorz7",
      "next": undefined,
      "styles": "visibility:visible;;transform:translate3d(0,0,0);",
    },
    Object {
      "map": undefined,
      "name": "1nywrpr",
      "next": undefined,
      "styles": "transition-duration:320ms;",
    },
    Object {
      "map": undefined,
      "name": "opk20j",
      "next": undefined,
      "styles": "transition-timing-function:linear;",
    },
    Object {
      "map": undefined,
      "name": "1gvesad",
      "next": undefined,
      "styles": "transition-property:visibility, transform;",
    },
  ],
  "hide": [Function],
  "isVisible": true,
  "show": [Function],
  "toggle": [Function],
}
`;

exports[`<Drawer> -> toggle: closed [2] 1`] = `
Object {
  "close": [Function],
  "id": "curls.drawer.2",
  "isOpen": false,
  "open": [Function],
  "toggle": [Function],
}
`;

exports[`<Drawer> -> toggle: closed 1`] = `
Object {
  "close": [Function],
  "id": "curls.drawer.2",
  "isOpen": false,
  "open": [Function],
  "toggle": [Function],
}
`;

exports[`<Drawer> -> toggle: hidden [2] 1`] = `
Object {
  "css": Array [
    Object {
      "name": "gyp8mm",
      "styles": "visibility:hidden;",
    },
    Object {
      "map": undefined,
      "name": "1nywrpr",
      "next": undefined,
      "styles": "transition-duration:320ms;",
    },
    Object {
      "map": undefined,
      "name": "opk20j",
      "next": undefined,
      "styles": "transition-timing-function:linear;",
    },
    Object {
      "map": undefined,
      "name": "1gvesad",
      "next": undefined,
      "styles": "transition-property:visibility, transform;",
    },
  ],
  "hide": [Function],
  "isVisible": false,
  "show": [Function],
  "toggle": [Function],
}
`;

exports[`<Drawer> -> toggle: hidden 1`] = `
Object {
  "css": Array [
    Object {
      "name": "gyp8mm",
      "styles": "visibility:hidden;",
    },
    Object {
      "map": undefined,
      "name": "1nywrpr",
      "next": undefined,
      "styles": "transition-duration:320ms;",
    },
    Object {
      "map": undefined,
      "name": "opk20j",
      "next": undefined,
      "styles": "transition-timing-function:linear;",
    },
    Object {
      "map": undefined,
      "name": "1gvesad",
      "next": undefined,
      "styles": "transition-property:visibility, transform;",
    },
  ],
  "hide": [Function],
  "isVisible": false,
  "show": [Function],
  "toggle": [Function],
}
`;

exports[`<Drawer> -> toggle: open 1`] = `
Object {
  "close": [Function],
  "id": "curls.drawer.2",
  "isOpen": true,
  "open": [Function],
  "toggle": [Function],
}
`;

exports[`<Drawer> -> toggle: visible 1`] = `
Object {
  "css": Array [
    Object {
      "map": undefined,
      "name": "1ltorz7",
      "next": undefined,
      "styles": "visibility:visible;;transform:translate3d(0,0,0);",
    },
    Object {
      "map": undefined,
      "name": "1nywrpr",
      "next": undefined,
      "styles": "transition-duration:320ms;",
    },
    Object {
      "map": undefined,
      "name": "opk20j",
      "next": undefined,
      "styles": "transition-timing-function:linear;",
    },
    Object {
      "map": undefined,
      "name": "1gvesad",
      "next": undefined,
      "styles": "transition-property:visibility, transform;",
    },
  ],
  "hide": [Function],
  "isVisible": true,
  "show": [Function],
  "toggle": [Function],
}
`;

exports[`<DrawerBox> -> as prop 1`] = `
.emotion-0 {
  visibility: hidden;
  -webkit-transition-duration: 320ms;
  transition-duration: 320ms;
  -webkit-transition-timing-function: linear;
  transition-timing-function: linear;
  -webkit-transition-property: visibility,-webkit-transform;
  -webkit-transition-property: visibility,transform;
  transition-property: visibility,transform;
  display: block;
  position: fixed;
  overflow-y: auto;
  z-index: 1000;
}

<span
  class="emotion-0"
  data-testid="drawer-box"
/>
`;

exports[`<DrawerBox> -> box properties 1`] = `
.emotion-0 {
  visibility: visible;
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
  -webkit-transition-duration: 320ms;
  transition-duration: 320ms;
  -webkit-transition-timing-function: linear;
  transition-timing-function: linear;
  -webkit-transition-property: visibility,-webkit-transform;
  -webkit-transition-property: visibility,transform;
  transition-property: visibility,transform;
  display: block;
  position: fixed;
  overflow-y: auto;
  z-index: 1000;
  margin-bottom: 1rem;
}

<div
  class="emotion-0"
  data-testid="drawer-box"
/>
`;

exports[`<DrawerBox> -> closed 1`] = `
.emotion-0 {
  display: block;
  position: fixed;
  overflow-y: auto;
  z-index: 1000;
  -webkit-transform: translate3d(-100%,0,0);
  -ms-transform: translate3d(-100%,0,0);
  transform: translate3d(-100%,0,0);
  visibility: hidden;
  -webkit-transition-duration: 160ms;
  transition-duration: 160ms;
  -webkit-transition-timing-function: linear;
  transition-timing-function: linear;
  -webkit-transition-property: visibility,-webkit-transform;
  -webkit-transition-property: visibility,transform;
  transition-property: visibility,transform;
}

<div
  class="emotion-0"
  data-testid="drawer-box"
  id="curls.drawer.7"
  tabindex="0"
/>
`;

exports[`<DrawerBox> -> element child 1`] = `
.emotion-0 {
  visibility: visible;
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
  -webkit-transition-duration: 320ms;
  transition-duration: 320ms;
  -webkit-transition-timing-function: linear;
  transition-timing-function: linear;
  -webkit-transition-property: visibility,-webkit-transform;
  -webkit-transition-property: visibility,transform;
  transition-property: visibility,transform;
  display: block;
  position: fixed;
  overflow-y: auto;
  z-index: 1000;
}

<div
  class="emotion-0"
  data-testid="drawer-box"
>
  <div />
</div>
`;

exports[`<DrawerBox> -> hidden 1`] = `
.emotion-0 {
  visibility: hidden;
  -webkit-transition-duration: 320ms;
  transition-duration: 320ms;
  -webkit-transition-timing-function: linear;
  transition-timing-function: linear;
  -webkit-transition-property: visibility,-webkit-transform;
  -webkit-transition-property: visibility,transform;
  transition-property: visibility,transform;
  display: block;
  position: fixed;
  overflow-y: auto;
  z-index: 1000;
}

<div
  class="emotion-0"
  data-testid="drawer-box"
/>
`;

exports[`<DrawerBox> -> open 1`] = `
.emotion-0 {
  display: block;
  position: fixed;
  overflow-y: auto;
  z-index: 1000;
  -webkit-transform: translate3d(-100%,0,0);
  -ms-transform: translate3d(-100%,0,0);
  transform: translate3d(-100%,0,0);
  visibility: hidden;
  -webkit-transition-duration: 160ms;
  transition-duration: 160ms;
  -webkit-transition-timing-function: linear;
  transition-timing-function: linear;
  -webkit-transition-property: visibility,-webkit-transform;
  -webkit-transition-property: visibility,transform;
  transition-property: visibility,transform;
}

<div
  class="emotion-0"
  data-testid="drawer-box"
  id="curls.drawer.8"
  tabindex="0"
/>
`;

exports[`<DrawerBox> -> visible 1`] = `
.emotion-0 {
  visibility: visible;
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
  -webkit-transition-duration: 320ms;
  transition-duration: 320ms;
  -webkit-transition-timing-function: linear;
  transition-timing-function: linear;
  -webkit-transition-property: visibility,-webkit-transform;
  -webkit-transition-property: visibility,transform;
  transition-property: visibility,transform;
  display: block;
  position: fixed;
  overflow-y: auto;
  z-index: 1000;
}

<div
  class="emotion-0"
  data-testid="drawer-box"
/>
`;
